sandbox/output
Reorder.java:11: error: cannot find symbol
            if (!newList.empty()) {
                        ^
  symbol:   method empty()
  location: variable newList of type List<Integer>
1 error
